--- a/public/index.html
+++ b/public/index.html
@@ -41,9 +41,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav">
-                  <li class="active"><a href="title.html">Home</a></li>
-                  <li><a href="coursecreation.html">Create a Course</a></li>
-                  <li ><a href="categories.html">Categories</a></li>
+                  <li class="active"><a href="title">Home</a></li>
+                  <li><a href="coursecreation">Create a Course</a></li>
+                  <li ><a href="categories">Categories</a></li>
                   <div class="col-sm-3 col-md-6">
                      <form class="navbar-form" role="search">
                         <div class="input-group">
@@ -68,7 +68,7 @@
                </ul>
                <ul class="nav navbar-nav navbar-right">
                   <li><a id="view">USER VIEW</a></li>
-                  <li id="user"><a href="profile.html"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
+                  <li id="user"><a href="profile"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
                   <li><a id="login" data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login/Sign Up</a></li>
                </ul>
             </div>
@@ -94,21 +94,21 @@
                      <h3>Recommended Courses</h3>
                      <div class="row">
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Chemistry</a></h4>
+                           <h4><a href="course">Chemistry</a></h4>
                            Academics<br>
                            Price: $1mil /hr <br>
                            Taught by Mr. White
                            <br><br>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Intro to Computer Programming</a></h4>
+                           <h4><a href="course">Intro to Computer Programming</a></h4>
                            Technology<br>
                            Price: $1bil Inclusive <br>
                            Taught by Mr. Jobs
                            <br><br>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Make-Up Tutorial</a></h4>
+                           <h4><a href="course">Make-Up Tutorial</a></h4>
                            Home-Related<br>
                            Price: Free <br>
                            Taught by Mr. Kerr 
@@ -123,13 +123,13 @@
                      <h3>Recommended Teachers </h3>
                      <div class="row">
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <a href="profile.html"><img src="images/walterwhite.jpg" style="width: 100%; padding: 15px;"></a>
+                           <a href="profile"><img src="images/walterwhite.jpg" style="width: 100%; padding: 15px;"></a>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <a href="profile.html"><img src="images/stevejobs.jpg" style="width: 100%; padding: 15px;"></a>
+                           <a href="profile"><img src="images/stevejobs.jpg" style="width: 100%; padding: 15px;"></a>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <a href="profile.html"><img src="images/thejoker.jpg" style="width: 100%; padding: 15px;"></a>
+                           <a href="profile"><img src="images/thejoker.jpg" style="width: 100%; padding: 15px;"></a>
                         </div>
                      </div>
                   </div>
@@ -140,19 +140,19 @@
                      <h3>Newest Courses</h3>
                      <div class="row">
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Sample Course 1</a></h4>
+                           <h4><a href="course">Sample Course 1</a></h4>
                            Music and Arts<br>
                            Price: $1mil /hr 
                            <br><br>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Sample Course 2</a></h4>
+                           <h4><a href="course">Sample Course 2</a></h4>
                            Technology<br>
                            Price: $1bil total  
                            <br><br>
                         </div>
                         <div class="col-xs-4 text-center" style="float: left;">
-                           <h4><a href="course.html">Sample Course 3</a></h4>
+                           <h4><a href="course">Sample Course 3</a></h4>
                            Home-Related<br>
                            Price: Free 
                            <br><br>
@@ -165,7 +165,7 @@
       </div> <br>
       <div class="panel-footer">
          <div class="container">
-            <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+            <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
                <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
                <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
                <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
