--- a/public/search.html
+++ b/public/search.html
@@ -20,9 +20,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav">
-                  <li><a href="title.html">Home</a></li>
-                  <li><a href="coursecreation.html">Create a Course</a></li>
-                  <li ><a href="categories.html">Categories</a></li>
+                  <li><a href="title">Home</a></li>
+                  <li><a href="coursecreation">Create a Course</a></li>
+                  <li ><a href="categories">Categories</a></li>
                   <div class="col-sm-3 col-md-6">
                      <form class="navbar-form" role="search">
                         <div class="input-group">
@@ -47,7 +47,7 @@
                </ul>
                <ul class="nav navbar-nav navbar-right">
                   <li><a id="view">USER VIEW</a></li>
-                  <li id="user"><a href="profile.html"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
+                  <li id="user"><a href="profile"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
                   <li><a id="login" data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login/Sign Up</a></li>
                </ul>
             </div>
@@ -89,7 +89,7 @@
 
   <div class="navbar navbar-default navbar-fixed-bottom">
     <div class="container">
-      <p class="navbar-text pull-left" style="color:white;">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+      <p class="navbar-text pull-left" style="color:white;">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
         <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
             <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
             <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
