--- a/public/categories.html
+++ b/public/categories.html
@@ -33,9 +33,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                <ul class="nav navbar-nav">
-                  <li ><a href="title.html">Home</a></li>
-                  <li><a href="coursecreation.html">Create a Course</a></li>
-                  <li class="active" ><a href="categories.html">Categories</a></li>
+                  <li ><a href="title">Home</a></li>
+                  <li><a href="coursecreation">Create a Course</a></li>
+                  <li class="active" ><a href="categories">Categories</a></li>
                   <div class="col-sm-3 col-md-6">
                      <form class="navbar-form" role="search">
                         <div class="input-group">
@@ -60,7 +60,7 @@
                </ul>
                <ul class="nav navbar-nav navbar-right">
                   <li><a id="view">USER VIEW</a></li>
-                  <li id="user"><a href="profile.html"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
+                  <li id="user"><a href="profile"><span class="glyphicon glyphicon-user"></span> JohnSmith</a></li>
                   <li><a id="login" data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login/Sign Up</a></li>
                </ul>
             </div>
@@ -78,19 +78,19 @@
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/academic.png" class="img-rounded" alt="Academic" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Academic Skills</a>
+    		<a href="search" class="btn btn-blue">Academic Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/art.png" class="img-rounded" alt="Art" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Music/Art Skills</a>
+    		<a href="search" class="btn btn-blue">Music/Art Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/cooking.png" class="img-rounded" alt="Cooking" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Cooking Skills</a>
+    		<a href="search" class="btn btn-blue">Cooking Skills</a>
     	</a>
     </div>
   </div>
@@ -101,19 +101,19 @@
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/home.png" class="img-rounded" alt="Home" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Home-Related Skills</a>
+    		<a href="search" class="btn btn-blue">Home-Related Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/office.png" class="img-rounded" alt="Office" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Office/Document Skills</a>
+    		<a href="search" class="btn btn-blue">Office/Document Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/games.png" class="img-rounded" alt="Game" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Sports/Gaming Skills</a>
+    		<a href="search" class="btn btn-blue">Sports/Gaming Skills</a>
     	</a>
     </div>
   </div>
@@ -124,13 +124,13 @@
     <div class="col-sm-4">
     	<a class="thumbnail">
     		<img src="images/tech.png" class="img-rounded" alt="Technology" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Technological Skills</a>
+    		<a href="search" class="btn btn-blue">Technological Skills</a>
     	</a>
     </div>
     <div class="col-sm-4"> 
     	<a class="thumbnail">
     		<img src="images/question.png" class="img-rounded" alt="Miscellaneous" height="200" width="200">
-    		<a href="search.html" class="btn btn-blue">Miscellaneous</a>
+    		<a href="search" class="btn btn-blue">Miscellaneous</a>
     	</a>
     </div>
   </div>
@@ -199,7 +199,7 @@
 
 <div class="panel-footer">
     <div class="container">
-      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus.html">About Us</a> | 
+      <p class="navbar-text pull-left">© 2016 - Site Built By Us | <a href="aboutus">About Us</a> | 
         <a href="https://twitter.com"><img src="images/twitter.png" class="img-circle social" alt="Twitter" height="30" width="30"></a>
             <a href="https://facebook.com"><img src="images/facebook.png" class="img-circle social" alt="Facebook" height="30" width="30"></a>
             <a href="https://plus.google.com"><img src="images/google.png" class="img-circle social" alt="Google" height="30" width="30"></a>
