--- a/public/navbar.html
+++ b/public/navbar.html
@@ -1,3 +1,4 @@
+<div user-login></div>
 <nav class="navbar navbar-inverse navbar-fixed-top">
    <div class="container-fluid">
       <div class="navbar-header">
@@ -11,41 +12,43 @@
       <div class="collapse navbar-collapse" id="myNavbar">
          <ul class="nav navbar-nav">
             <li ng-class="{ active: isActive('/')}"><a href="/">Home</a></li>
-            <li ng-class="{ active: isActive('/coursecreation')}"><a ng-href="coursecreation">Create a Course</a></li>
             <li ng-class="{ active: isActive('/categories')}"><a href="categories">Categories</a></li>
-            <div class="col-sm-3 col-md-6">
-               <form class="navbar-form" role="search">
+            <li ng-class="{ active: isActive('/coursecreation')}" class="user" style="display:none"><a href="coursecreation">Create a Course</a></li>
+         </ul>
+         <ul class="nav navbar-nav">
+            <div class="col-sm-12 col-md-12">
+               <form name="searchform" class="navbar-form" action="search" method="GET">
                   <div class="input-group">
-                     <div class="input-group-btn search-panel">
+                     <div class="input-group-btn search-panel" ng-controller="searchCtrl">
                         <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                         <span id="search_by">Search by</span> <span class="caret"></span>
                         </button>
                         <ul class="dropdown-menu" role="menu">
-                           <li><a href="#">Keywords</a></li>
-                           <li><a href="#">Teacher Name</a></li>
-                           <li><a href="#">Tag</a></li>
+                           <li ng-click="changeParam('Keywords')"><a>Keywords</a></li>
+                           <li ng-click="changeParam('Teacher Name')"><a>Teacher Name</a></li>
+                           <li ng-click="changeParam('Tag')"><a>Tag</a></li>
                         </ul>
                      </div>
-                     <input type="hidden" name="search_param" value="Keywords" id="search_param">
-                     <input type="text" class="form-control" name="search_terms" placeholder="Search">
+                     <input type="hidden" name="param" value="Keywords" id="param">
+                     <input type="text" class="form-control" name="terms" placeholder="Search" required>
                      <span class="input-group-btn">
-                     <button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
+                        <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
                      </span>
                   </div>
                </form>
             </div>
          </ul>
          <ul class="nav navbar-nav navbar-right">
-            <li><a id="admin">ADMIN</a></li>
-            <li id="user"><a href="profile"><span class="glyphicon glyphicon-user"></span></a></li>
-            <li><a id="login" data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-            <li><a id="signup" data-toggle="modal" data-target="#signupModal"><span class="glyphicon glyphicon-edit"></span> Sign Up</a></li>
+            <li ng-show="admin"><a id="admin">ADMIN</a></li>
+            <li class="user" style="display:none"><a href="profile" id="screenName"></a></li>
+            <li><a id="login" data-toggle="modal" data-target="#loginModal" class="guest"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+            <li><a id="signup" data-toggle="modal" data-target="#signupModal" class="guest"><span class="glyphicon glyphicon-edit"></span> Sign Up</a></li>
+            <li><a id="signout" data-toggle="modal" data-target="#logoutModal" class="user" style="display:none"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
          </ul>
       </div>
    </div>
 </nav>
 
-<div ng-controller="ModalDemoCtrl">
 <!-- Modal -->
 <div class="modal fade" id="loginModal" role="dialog">
    <div class="modal-dialog">
@@ -56,20 +59,20 @@
       <button type="button" class="close" data-dismiss="modal">&times;</button>
       <h4 class="modal-title">Please sign in</h4>
       </div>
-      <div class="modal-body text-center">
-      <form class="form-signin">
-         <label for="inputUsername" class="sr-only">Username</label>
-         <input type="username" id="inputUsername" class="form-control" data-toggle="tooltip" title="Use 'JohnSmith'" placeholder="Username" required="">
+      <div class="modal-body text-center" ng-controller="login">
+         <form class="form-signin" ng-submit="sendPost()">
+            <label for="inputUsername" class="sr-only">Username</label>
+            <input type="username" ng-model="username" id="inputUsername" class="form-control" placeholder="Username" required>
+            <br>
+            <label for="inputPassword" class="sr-only">Password</label>
+            <input type="password" ng-model="password" id="inputPassword" class="form-control" placeholder="Password" required>
+            <br>
+            <button id="submit" class="btn btn-lg btn-primary" type="submit">Sign in</button>
+         </form>
          <br>
-         <label for="inputPassword" class="sr-only">Password</label>
-         <input type="password" id="inputPassword" class="form-control" data-toggle="tooltip" title="Use 'password'" placeholder="Password" required="">
-      </form> <br>
-      <div id="notFound" style='color:red; display:none;'>* Account Not Found *</div>
-         <button id="submit" class="btn btn-lg btn-primary" type="submit">Sign in</button>
-         <br>
-      <hr>
-      <div>Or Sign In With (PART 2)</div>
-         <a><img src="images/loginFB.png" class="social" alt="LoginFB"></a>
+         <hr>
+         <div>Or Sign In With</div>
+         
       </div>
       <div class="modal-footer">
          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -90,17 +93,17 @@
             <h4 class="modal-title">Sign Up</h4>
          </div>
          <div class="modal-body text-center">
-            <form class="form-signin">
-            <label for="inputUsername" class="sr-only">Username</label>
-            <input type="username" id="inputUsernameSU" class="form-control" placeholder="Username" required="">
-            <br>
-            <label for="inputPassword" class="sr-only">Password</label>
-            <input type="password" id="inputPasswordSU" class="form-control" placeholder="Password" required="">
-            <br>
-            <label for="inputEmail" class="sr-only">Email</label>
-            <input type="email" id="inputEmailSU" class="form-control" placeholder="Email Address" required="">
-            <br>
-            <button id="submitSU" class="btn btn-lg btn-primary" type="submit">Sign Up</button>
+            <form class="form-signin" action="/users/user" method="POST" id="form_signup">
+               <label for="inputUsername" class="sr-only">Username</label>
+               <input type="username" name="username" id="inputUsernameSU" class="form-control" placeholder="Username" required="">
+               <br>
+               <label for="inputPassword" class="sr-only">Password</label>
+               <input type="password" name="password" id="inputPasswordSU" class="form-control" placeholder="Password" required="">
+               <br>
+               <label for="inputEmail" class="sr-only">Email</label>
+               <input type="email" name="email" id="inputEmailSU" class="form-control" placeholder="Email Address" required="">
+               <br>
+               <button id="submitSU" class="btn btn-lg btn-primary" type="submit">Sign Up</button>
             </form>
          </div>
          <div class="modal-footer">
@@ -123,7 +126,9 @@
          </div>
          <div class="modal-body text-center">
             <div> Are you sure you want logout?</div> <br>
-            <button id="logout_btn" class="btn btn-primary" type="logout">Logout</button>
+            <form action="logout" method="GET">
+               <button class="btn btn-lg btn-primary" type="submit">Logout</button>
+            </form>
          </div>
          <div class="modal-footer">
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -131,5 +136,4 @@
       </div>
 
    </div>
-</div>
 </div>
