--- a/public/categories.html
+++ b/public/categories.html
@@ -10,10 +10,32 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
-  <script src="scripts/categoryapp.js"></script>
+  <script src="scripts/app.js"></script>
   <script src="scripts/navbar.js"></script>
+  <script> 
+  app.controller("topCtrl", function($scope) {
+    $scope.topList = [
+           {rank: '1', course:'Linear Algebra', votes:'58', rating: '4.3'},
+           {rank: '2',course:'Chemistry',votes:'54', rating: '4.4'},
+           {rank: '3',course:'Biology',votes:'53', rating: '4.0'},
+           {rank: '4',course:'French',votes:'50', rating: '3.9'},
+           {rank: '5',course:'English For Non-speakers',votes:'47', rating: '3.8'},
+           {rank: '6',course:'Note Taking',votes:'44', rating: '4.0'},
+           {rank: '7',course:'Canadian History',votes:'43', rating: '3.7'},
+           {rank: '8',course:'Studying Strategies',votes:'38', rating: '4.0'},
+           {rank: '9',course:'Grammar',votes:'27', rating: '4.6'},
+           {rank: '10',course:'Calculus',votes:'32', rating: '3.6'}];
+  });
+
+  $(document).ready(function(){
+    $(".nav-pills>li").click(function(){
+      $(".nav-pills>li").removeClass();
+      $(this).addClass("active");
+    });
+  });
+  </script>
 </head>
-<body ng-app="categoryApp" >
+<body ng-app="learnologyApp" >
 
 <div ng-controller="navCtrl"> 
   <div ng-include="'navbar.html'"></div>
@@ -31,19 +53,19 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/academic.png" class="img-rounded" alt="Academic" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Academic Skills</a>
+          <a href="search?param=academic" class="btn btn-blue">Academic Skills</a> 
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/art.png" class="img-rounded" alt="Art" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Music/Art Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Music/Art Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/cooking.png" class="img-rounded" alt="Cooking" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Cooking Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Cooking Skills</a>
       	</a>
       </div>
     </div>
@@ -54,19 +76,19 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/home.png" class="img-rounded" alt="Home" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Home-Related Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Home-Related Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/office.png" class="img-rounded" alt="Office" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Office/Document Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Office/Document Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/games.png" class="img-rounded" alt="Game" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Sports/Gaming Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Sports/Gaming Skills</a>
       	</a>
       </div>
     </div>
@@ -77,13 +99,13 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/tech.png" class="img-rounded" alt="Technology" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Technological Skills</a>
+      		<a href="search?param=academic" class="btn btn-blue">Technological Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/question.png" class="img-rounded" alt="Miscellaneous" height="200" width="200">
-      		<a href="search" class="btn btn-blue">Miscellaneous</a>
+      		<a href="search?param=academic" class="btn btn-blue">Miscellaneous</a>
       	</a>
       </div>
     </div>
