--- a/public/coursecreation.html
+++ b/public/coursecreation.html
@@ -11,6 +11,33 @@
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
       <script src="scripts/app.js"></script>
       <link rel="stylesheet" href="css/style.css">
+      <script>
+      function reset() {
+          document.getElementById("create").reset();
+      }
+
+      app.controller('create', function($scope, $http) {
+         $scope.category = "Academic";
+         $scope.level = "Beginner" ;
+          $scope.sendPost = function() {
+            var req = { 
+              method: 'POST',
+              url: 'create',
+              data: $.param({
+               title: $scope.title, 
+               category: $scope.category, 
+               description: $scope.description,
+               price: $scope.price,
+               difficulty: $scope.level,
+               skill1: $scope.skill1,
+               skill2: $scope.skill2,
+               skill3: $scope.skill3 }),
+              headers: {'Content-Type': 'application/x-www-form-urlencoded'}
+            }
+            $http(req);
+          }; 
+      });
+      </script>
       <head>
    <body ng-app="learnologyApp">
       <script src="scripts/facebooklogin.js"></script>
@@ -25,88 +52,85 @@
          </div>
       </div>
       <br>
-         <div class="container-fluid">
-            <form class="form-horizontal" role="form" action="profile">
+         <div class="container-fluid" ng-controller="create">
+            <form id="create" class="form-horizontal" ng-submit="sendPost()" autocomplete=off>
                <fieldset class="col-sm-6 col-sm-offset-3">
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="first-name">Course Title</label>
                      <div class="col-sm-8">
-                        <input type="text" class="form-control" placeholder="Biology" id="course_title">
+                        <input type="text" class="form-control" placeholder="Biology" ng-model="title" maxlength="30" required>
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3">Course Category:</label>
                      <div class="col-sm-8">
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category" checked="checked">Academic
+                           <input type="radio" value="Academic" name="category" ng-model="category" checked="checked">Academic
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Music and Arts
+                           <input type="radio" value="Music and Arts" name="category" ng-model="category" >Music and Arts
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Office Skills
+                           <input type="radio" value="Office Skills" name="category" ng-model="category" >Office Skills
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Cooking and Brewing
+                           <input type="radio" value="Cooking" name="category" ng-model="category" >Cooking
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Home-Related
+                           <input type="radio" value="Home-Related" name="category" ng-model="category" >Home-Related
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Sports and Games 
+                           <input type="radio" value="Sports and Games " name="category" ng-model="category" >Sports and Games 
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Technology
+                           <input type="radio" value="Technology" name="category" ng-model="category" >Technology
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="category">Miscellaneous (Other)
+                           <input type="radio" value="Miscellaneous" name="category" ng-model="category" >Miscellaneous (Other)
                         </label> 
-                     </divalue=""v>
+                        </divalue=""v>
+                     </div>
                   </div>
                   <div class="form-group">
-
                      <label class="control-label col-sm-3" for="price">Price:</label>
                      <div class="col-sm-8">
-                        <input type="price" class="form-control" id="price">
+                        <input type="price" class="form-control" ng-model="price" placeholder='10'; pattern="\d+(\.\d{2})?" maxlength="5" required>
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="description">Course Description</label>
                      <div class="col-sm-8">
-                        <textarea name="description" rows="4" class="form-control"></textarea>
+                        <textarea name="description" rows="4" class="form-control" ng-model="description" required></textarea>
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3" for="skills">Previous Skills Required:</label>
                      <div class="col-sm-8">
-                        <input type="skills" class="form-control" id="skill" placeholder="Skill 1">
-                        <input type="skills" class="form-control" id="skill" placeholder="Skill 2">
-                        <input type="skills" class="form-control" id="skill" placeholder="Skill 3">
+                        <input type="skills" class="form-control" id="skill" ng-model="skill1" placeholder="Skill 1" maxlength="30">
+                        <input type="skills" class="form-control" id="skill" ng-model="skill2" placeholder="Skill 2" maxlength="30">
+                        <input type="skills" class="form-control" id="skill" ng-model="skill3" placeholder="Skill 3" maxlength="30">
                      </div>
                   </div>
                   <div class="form-group">
                      <label class="control-label col-sm-3">Challenge Level:</label>
                      <div class="col-sm-8">
                         <label class="radio-inline">
-                           <input type="radio" value="" name="level" checked="checked">Beginner
+                           <input type="radio" value="Beginner" name="level" ng-model="level">Beginner
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="level">Intermediate
+                           <input type="radio" value="Intermediate" ng-model="level" name="level">Intermediate
                         </label>
                         <label class="radio-inline">
-                           <input type="radio" value="" name="level">Advanced
+                           <input type="radio" value="Advanced" ng-model="level" name="level">Advanced
                         </label>
                      </div>
                   </div>
                   <div>
                      <button type="submit" class="btn btn-primary btn-block">Create Course</button>
-                     <button type="submit" class="btn btn-default btn-block">Cancel</button>
-                     
+                     <input type="button" class="btn btn-danger btn-block" onclick="reset()" value="Cancel">
                   </div> 
                </fieldset>
-               </form>
-               
-         </div>
+            </form>      
       </div><br>
       <div class="panel-footer">
          <div class="container">
