--- a/public/navbar.html
+++ b/public/navbar.html
@@ -93,7 +93,7 @@
             <h4 class="modal-title">Sign Up</h4>
          </div>
          <div class="modal-body" ng-controller="signUpFormCtrl">
-            <form role="form" class="form-signin" name="signupForm" action="/users/user" method="POST">
+            <form role="form" class="form-signin" name="signupForm" action="/users/user" method="POST" ng-submit="signupForm.$valid && !isInvalid">
 				<div class="form-group">
 					<label for="inputEmailSU" class="sr-only">Email</label>
 					<input type="email" name="email" class="form-control" id="inputEmailSU" ng-model="email" placeholder="Email Address" ng-model-options="{updateOn: 'blur'}" ng-change="emailExists()" required>
@@ -102,11 +102,17 @@
 				</div>
 				<div class="form-group">
 					<label for="inputPasswordSU" class="sr-only">Password</label>
-					<input type="password" name="password" class="form-control" id="inputPasswordSU" placeholder="Password" required>
+					<input type="password" ng-model="password" ng-model-options="{updateOn: 'blur'}" name="password" class="form-control" id="inputPasswordSU" placeholder="Password" ng-change="confirmPassword()" required>
+				</div>
+				<div class="form-group">
+					<label for="inputPasswordSU" class="sr-only">Re-enter Password</label>
+					<input type="password" ng-model="reEnterPassword" name="reEnterPassword" class="form-control" id="inputPasswordSU" placeholder="Re-enter Password" ng-model-options="{updateOn: 'blur'}" ng-change="confirmPassword()" required>
+					<span ng-show="passwordNotMatch" ng-init="passwordNotMatch = false">* Re-entered password does not match.</span>
 				</div>
 				<div class="form-group">
 					<label for="inputUsernameSU" class="sr-only">Screen Name</label>
-					<input name="screenName" class="form-control" id="inputScreenNameSU" placeholder="Screen Name" ng-model="screenName">
+					<!-- Reference: http://stackoverflow.com/questions/27322826/angular-restriction-to-not-allow-spaces-in-text-field -->
+					<input name="screenName" ng-model="screenName" class="form-control" ng-trim="false" ng-change="screenName = screenName.split(' ').join('')" id="inputScreenNameSU" placeholder="Screen Name">
 				</div>
 				<div class="form-group text-center">
 					<button id="submitSU" class="btn btn-lg btn-primary" type="submit">Sign Up</button>
