--- a/public/admin.html
+++ b/public/admin.html
@@ -45,7 +45,7 @@
             <p>Confirm Deletion Of {{value}}</p>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="removeItem($index)">Confirm</button>
+            <button type="button" class="btn btn-primary" data-dismiss="modal" ng-click="removeItem()">Confirm</button>
             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
           </div>
         </div>
