--- a/public/admin.html
+++ b/public/admin.html
@@ -23,14 +23,24 @@
 <div style="height:600px;" ng-controller="list">
   <nav class="col-sm-3">
     <ul class="nav nav-pills nav-stacked">
-      <li><a ng-click="getlist('users')">Users</a></li>
-      <li><a ng-click="getlist('courses')">Courses</a></li>
+      <input type="hidden" ng-model="use">
+      <li ng-class="{ 'active': use}"><a ng-click="getlist('users')" >Users</a></li>
+      <li ng-class="{ 'active': !use}"><a ng-click="getlist('courses')">Courses</a></li>
     </ul>
   </nav>
   <div class="col-sm-9">
     <div class="panel panel-primary " > 
       <div class="panel-heading">{{title}}</div>
       <div class="panel-body">
+        <form name="searchform" class="navbar-form" action="search" method="GET">
+          <div class="input-group">
+             <input type="text" class="form-control" name="terms" sytle="border-radius: 30px 0px 0px 30px;" placeholder="Search" required>
+             <span class="input-group-btn">
+                <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+             </span>
+          </div>
+          <label class="checkbox-inline" style="float:right;"><input type="checkbox" value="">Flagged</label>
+        </form>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="x in data">
             {{x}}
