--- a/public/categories.html
+++ b/public/categories.html
@@ -53,19 +53,19 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/academic.png" class="img-rounded" alt="Academic" height="200" width="200">
-          <a href="search?param=academic" class="btn btn-blue">Academic Skills</a> 
+          <a href="search?param=Category&terms=Academic" class="btn btn-blue">Academic Skills</a> 
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/art.png" class="img-rounded" alt="Art" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Music/Art Skills</a>
+      		<a href="search?param=Category&terms=Music+and+Arts" class="btn btn-blue">Music/Art Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/cooking.png" class="img-rounded" alt="Cooking" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Cooking Skills</a>
+      		<a href="search?param=Category&terms=Cooking" class="btn btn-blue">Cooking Skills</a>
       	</a>
       </div>
     </div>
@@ -76,19 +76,19 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/home.png" class="img-rounded" alt="Home" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Home-Related Skills</a>
+      		<a href="search?param=Category&terms=Home-Related" class="btn btn-blue">Home-Related Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/office.png" class="img-rounded" alt="Office" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Office/Document Skills</a>
+      		<a href="search?param=Category&terms=Office+Skills" class="btn btn-blue">Office/Document Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/games.png" class="img-rounded" alt="Game" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Sports/Gaming Skills</a>
+      		<a href="search?param=Category&terms=Sports+and+Games" class="btn btn-blue">Sports/Gaming Skills</a>
       	</a>
       </div>
     </div>
@@ -99,13 +99,13 @@
       <div class="col-sm-4">
       	<a class="thumbnail">
       		<img src="images/tech.png" class="img-rounded" alt="Technology" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Technological Skills</a>
+      		<a href="search?param=Category&terms=Technology" class="btn btn-blue">Technological Skills</a>
       	</a>
       </div>
       <div class="col-sm-4"> 
       	<a class="thumbnail">
       		<img src="images/question.png" class="img-rounded" alt="Miscellaneous" height="200" width="200">
-      		<a href="search?param=academic" class="btn btn-blue">Miscellaneous</a>
+      		<a href="search?param=Category&terms=Miscellaneous" class="btn btn-blue">Miscellaneous</a>
       	</a>
       </div>
     </div>
