--- a/public/admin.html
+++ b/public/admin.html
@@ -33,12 +33,12 @@
       <div class="panel-body">
         <form name="searchform" class="navbar-form" action="search" method="GET">
           <div class="input-group">
-             <input type="text" class="form-control" name="terms" sytle="border-radius: 30px 0px 0px 30px;" placeholder="Search" required>
+             <input type="text" class="form-control" name="terms" placeholder="Search" required>
              <span class="input-group-btn">
                 <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
              </span>
           </div>
-          <label class="checkbox-inline" style="float:right;"><input type="checkbox" value="">Flagged</label>
+          <label class="checkbox-inline" style="float:right;"><input type="checkbox" value="" ng-model="confirmed" ng-change="getFlagged()">Flagged</label>
         </form>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="x in data">
