--- a/public/admin.html
+++ b/public/admin.html
@@ -31,18 +31,18 @@
     <div class="panel panel-primary " > 
       <div class="panel-heading">{{title}}</div>
       <div class="panel-body">
-        <form name="searchform" class="navbar-form" action="search" method="GET">
+        <form name="searchform" class="navbar-form" ng-submit="findItem()" method="GET">
           <div class="input-group">
-             <input type="text" class="form-control" name="terms" placeholder="Search" required>
+             <input type="text" class="form-control" ng-model="searchID" placeholder="Search" required>
              <span class="input-group-btn">
-                <button id="submit" class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
+                <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
              </span>
           </div>
           <label class="checkbox-inline" style="float:right;"><input type="checkbox" value="" ng-model="confirmed" ng-change="getFlagged()">Flagged</label>
         </form>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="x in data">
-            {{x}}
+            <a ng-href="{{link}}/{{x}}">{{x}}</a>
             <button type="button" class="close" data-toggle="modal" ng-click="delete($index)" data-target="#confirmModal">&times;</button>
           </li>
         </ul>
