--- a/public/admin.html
+++ b/public/admin.html
@@ -38,7 +38,7 @@
                 <button class="btn btn-default" type="submit"><span class="glyphicon glyphicon-search"></span></button>
              </span>
           </div>
-          <label class="checkbox-inline" style="float:right;"><input type="checkbox" value="" ng-model="confirmed" ng-change="getFlagged()">Flagged</label>
+          <label class="checkbox-inline" style="float:right;"><input type="checkbox" ng-model="confirmed" ng-change="getFlagged()">Flagged</label>
         </form>
         <ul class="list-group">
           <li class="list-group-item" ng-repeat="x in data">
