--- a/public/navbar.html
+++ b/public/navbar.html
@@ -59,7 +59,7 @@
       <button type="button" class="close" data-dismiss="modal">&times;</button>
       <h4 class="modal-title">Please sign in</h4>
       </div>
-      <div class="modal-body text-center" ng-controller="login">
+      <div class="modal-body text-center" ng-controller="login" autocomplete=off>
          <form class="form-signin" ng-submit="sendPost()">
             <label for="inputUsername" class="sr-only">Username</label>
             <input type="username" ng-model="username" id="inputUsername" class="form-control" placeholder="Username" required>
@@ -93,7 +93,7 @@
             <h4 class="modal-title">Sign Up</h4>
          </div>
          <div class="modal-body" ng-controller="signUpFormCtrl">
-            <form role="form" class="form-signin" name="signupForm" action="/users/user" method="POST">
+            <form role="form" class="form-signin" name="signupForm" action="/users/user" method="POST" autocomplete=off>
 				<div class="form-group">
 					<label for="inputEmailSU" class="sr-only">Email</label>
 					<input type="email" name="email" class="form-control" id="inputEmailSU" ng-model="email" placeholder="Email Address" ng-model-options="{updateOn: 'blur'}" ng-change="emailExists()" required>
