--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
         </style>
       <head>
    <body ng-app="learnologyApp">
+      <script src="scripts/facebooklogin.js"></script>
       <div ng-controller="navCtrl"> 
         <div ng-include="'navbar.html'"></div>
       </div>
