--- a/public/navbar.html
+++ b/public/navbar.html
@@ -72,7 +72,8 @@
          <br>
          <hr>
          <div>Or Sign In With</div>
-         
+         <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+         </fb:login-button>
       </div>
       <div class="modal-footer">
          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
