--- a/public/search.html
+++ b/public/search.html
@@ -21,39 +21,17 @@
 </head>
 
 <body ng-app="learnologyApp" >
- 
+ <div search-res></div>
   <div ng-controller="navCtrl"> 
     <div ng-include="'navbar.html'"></div>
   </div> 
 
   <div class="container">
     <h1>Search Results</h1>
-    <h3 id="result">1 result(s) were found for the search for programming <div class="btn-group">
-      <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown">
-        Sort By
-      </button>
-      <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Course Name</a></li>
-        <li><a class="dropdown-item" href="#">Teacher Name</a></li>
-       <li> <a class="dropdown-item" href="#">Rating</a></li>
-      </div>
-    </ul></h3>
-    
-    <section class="col-xs-12 col-sm-6 col-md-12">
-      <article class="search-result-row">
-        <div class="col-xs-12 col-sm-12 col-md-7 excerpet">
-
-          <h3><a href="#">C Programming</a></h3>
-          <ul id="result_info">
-            <li>Teacher Name: <a href="#">Sky</a></li>
-            <li>Course Rating: <i class="glyphicon glyphicon-star"></i><i class="glyphicon glyphicon-star"></i><i class="glyphicon glyphicon-star"></i><i class="glyphicon glyphicon-star"></i><i class="glyphicon glyphicon-star"></i>
-            </li>
-            <li>Difficulty Level: Asian</li>
-          </ul>
-          <p>C programming course</p>
-
-        </div>
-      </article>
+   
+    <div id="searchRes">
+    </div>
+    </article>
     </section>
   </div>
   </div>
